--- a/config.sample
+++ b/config.sample
@@ -1,6 +1,6 @@
 {
   "scheme": "https",
-  "base_url": "",
+  "base_url": "www.domain.com",
   "paths": {
     "index": "index",
     "login": "login"
