--- a/requirements_py3.txt
+++ b/requirements_py3.txt
@@ -1,9 +1,19 @@
+appnope==0.1.0
 blessings==1.6
 bpython==0.15
 curtsies==0.2.6
+decorator==4.0.10
 greenlet==0.4.10
+ipython==5.0.0
+ipython-genutils==0.1.0
 lxml==3.6.1
+pexpect==4.2.0
+pickleshare==0.7.3
+prompt-toolkit==1.0.5
+ptyprocess==0.5.1
 Pygments==2.1.3
 requests==2.11.0
+simplegeneric==0.8.1
 six==1.10.0
+traitlets==4.2.2
 wcwidth==0.1.7
